<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".second_activity"
    android:background="@color/tint"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/CS1100"
        android:textSize="40sp"
        android:textColor="@color/gold"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/navy"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/des1100"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textColor="@color/navy"
        android:shadowColor="@color/gold"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginStart="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/description_bold"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/descript_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_description_here"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_hours_bold"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/credit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_credits_here"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prerequisite_courses_bold"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/prereq_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_prerequisites_here"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>