<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--search bar-->
    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/search_hint"
        android:hint="@string/search_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        android:paddingTop="70dp"
        android:paddingBottom="15dp"
        >

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="top|center"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/card0"
                android:layout_width="185dp"
                android:layout_height="185dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/gold"
                app:cardCornerRadius="30dp"
                app:cardElevation="50dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:paddingTop="60dp"
                        android:textAlignment="center"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/tint"
                        android:shadowColor="#000000"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"
                        android:text="@string/CS1100"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/tint"
                        android:textAlignment="center"
                        android:text="@string/des1100"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="185dp"
                android:layout_height="185dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/navy"
                app:cardCornerRadius="30dp"
                app:cardElevation="50dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:paddingTop="60dp"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/gold"
                    android:shadowColor="@color/white"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:text="@string/CS1301"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/gold"
                    android:textAlignment="center"
                    android:text="@string/des1301"
                    />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn2"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:text="@string/CS1331"
                />
            <Button
                android:id="@+id/btn3"
                android:layout_height="190dp"
                android:layout_width="190dp"
                android:text="@string/CS1332"
                />
            <Button
                android:id="@+id/btn4"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:text="@string/CS2110"
                />
            <Button
                android:id="@+id/btn5"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:text=""
                />
            <Button
                android:id="@+id/btn6"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:text=""
                />
            <Button
                android:id="@+id/btn7"
                android:layout_height="190dp"
                android:layout_width="190dp"
                android:text=""
                />
            <Button
                android:id="@+id/btn8"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:text=""
                />
        </GridLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>